assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Lato:wght@100&display=swap');

/*----------------------------------------------------general layout*/
* {
    margin: 0;
    padding: 0;
    border: none;
}


/*----------------------------------------------------header*/
.logo {
    padding-top: 30px;
    text-align: center;
    text-transform: uppercase;
    color:#ffcb05;
    text-shadow:
    -1px -1px 0 #2a75bb,  
     1px -1px 0 #2a75bb,
     -1px 1px 0 #2a75bb,
      1px 1px 0 #2a75bb;
    text-decoration: none;
    font-size: 400%;
}

/*---------------------------------------------------- body*/

body {
    font-family: 'Bangers', cursive;
}

a {
    text-decoration: none;
}

.background {
    background-image: url("../images/pokemon.background.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    overflow: hidden;
    width: 100%;
    height: 100vh;
}

/*---------------------------------------------------- game-section*/

.game-section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
    padding-top: 30px;
}

.game-container {
    background: #2a75bb;
    width: 50%;
    height: fit-content;
    border-radius: 10px;
    box-shadow: 1px 1px 10px #000;
}

/*---------------------------------------------------- menu-section*/
.menu {
    text-align: center;
    font-family: 'Lato', sans-serif;
    justify-content: center;
    color: white;
    padding: 20px;
}


.menu-controls {
    display: grid;
    justify-content: center;
    align-items: center;
    padding-top: 100px;
    gap: 50px;
}

.menu-controls button {
    color: black;
    font-size: 20px;
    font-weight: 900;
    font-family: 'Lato', sans-serif;
    background-color: #ffcb05;
    border-radius: 10px;
    width: 200px;
    height: 65px;
    box-shadow: 1px 1px 5px #000;
    margin-bottom: 50px;
}

.btn:hover {
    color: white;
}

#menu-h2 {
    font-size: 2rem;
}

#menu-h3 {
    font-size: 1.5rem;
}

/*---------------------------------------------------- modal*/
.modal-container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    opacity: 0;
    pointer-events: none;
    background-color: rgba(0, 0, 0, 0.9);
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    transition: opacity 0.5s ease;
}

.modal-container.show {
    pointer-events: auto;
    opacity: 1;
}



.modal {
    text-align: center;
    background: #2a75bb;
    width: 40%;
    height: fit-content;
    border-radius: 10px;
    box-shadow: 1px 1px 10px #000;
    justify-content: center;
    align-items: center;
    color: white;
    padding: 30px;
}


.modal p {
    font-size: 1.2rem;
    font-weight: bold;
    font-family: 'Lato', sans-serif;
}


.modal h1 {
    margin-top: 25px;
    font-size: 2rem;
    font-weight: 900;
    font-family: 'Bangers', cursive;
    color:#ffcb05;
}

.modal button {
    color: black;
    font-size: 15px;
    font-weight: bold;
    font-family: 'Lato', sans-serif;
    background-color: #ffcb05;
    border-radius: 10px;
    width: 100px;
    height: 40px;
    box-shadow: 1px 1px 5px #000;
}

/*---------------------------------------------------- quiz question-answer area*/

.hide {
    display: none;
  }

.disable {
    pointer-events: none;
}

.option-btn {
    color: black;
    font-size: 20px;
    font-weight: 900;
    font-family: 'Lato', sans-serif;
    background-color: #ffcb05;
    border:5px solid #ffcb05;
    border-radius: 10px;
    width: 275px;
    height: 75px;
    box-shadow: 1px 1px 5px #000;
}

.option-btn:hover {
    color: white;
}

.button-grid {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: center;
    gap: 50px;
    margin: 45px 0;
}

#next-btn {
    border: 10px solid #262122;
    width: 100px;
    height: 100px;
    border-radius: 100%;
    background: linear-gradient( 150deg, #BA0C2F 0%, #BA0C2F 48%, #262122 48%, #262122 52%, #FFF 52%, #FFF 100%);
    color: #ffcb05;
    font-size: 30px;
    letter-spacing: 4px;
    font-weight: bold;
    font-family: 'Bangers', cursive;
    margin-bottom: 20px;
  }

  .next-btn-container {
      display: flex;
      justify-content: center;
      align-items: center;
  }

  #next-btn:hover {
    box-shadow:  0 0 0 4px #BA0C2F;
  }

  .next-animated {
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-iteration-count: 3;
    animation-name: shake;
  }
  
  @keyframes shake {
    from {
      transform: none;
    }
    20% {
      transform: translate3d(-20%, 0, 0) rotate3d(0, 0, 1, -10deg);
    }
    40% {
      transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 5deg);
    }
    50% {
      transform: translate3d(-10%, 0, 0) rotate3d(0, 0, 1, -10deg);
    }
    60% {
      transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 50deg);
    }
    to {
      transform: none;
    }
  }

  #question-text {
      text-align: center;
      color: white;
      font-size: 1.2rem;
      font-weight: bold;
      font-family: 'Lato', sans-serif;
      margin-top: 10px;
      margin-bottom: 10px;
  }
  
  .score-area {
    display: flex;
    justify-content: space-around;
    text-align: center;
    color: white;
    font-size: 1.2rem;
    font-weight: bold;
    font-family: 'Lato', sans-serif;
    margin-top: 20px;
    margin-bottom: 20px;
}

#play-again-btn {
    color: black;
    font-size: 20px;
    font-weight: 900;
    font-family: 'Lato', sans-serif;
    background-color: #ffcb05;
    border-radius: 10px;
    width: 200px;
    height: 65px;
    box-shadow: 1px 1px 5px #000;
    margin-bottom: 50px;
}

.play-again-btn-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#play-again-btn:hover {
    color: white;
}

.end-quiz-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#end-quiz-heading {
    font-family: 'Lato', sans-serif;
    color: white;
}

#total-score {
    font-family: 'Lato', sans-serif;
    color: white;
}

.end-quiz-img {
    display: flex;
    justify-content: center;
    align-items: center;
}

/*---------------------------------------------------- media queries*/

@media (max-width: 1050px) {
    .modal {
        width: 45%;
    }
}

@media (max-width: 1239px) {
    .game-container {
        width: 70%
    }
}

@media (max-width: 890px) {
    .button-grid {
        display: flex;
        flex-wrap: wrap;
        gap: 10px;
    }
}

@media (max-width: 799px) {
    .button-grid {
        margin: 30px auto;
    }
    .option-btn {
        height: 60px;
    }
    #next-btn {
        margin-bottom: 10px;
    }
    .logo {
        font-size: 350%;
    }
}


@media (max-width: 750px) {
    .modal {
        width: 50%;
    }
}

@media (max-width: 605px) {
    .modal {
        width: 55%;
    }
}

@media (max-width: 480px) {
    .menu-controls button {
        width: 150px;
    }
    .game-container {
        width: 80%
    }
}

@media (max-width: 392px) {
    .modal {
        width: 60%;
    }
    .game-container {
        width: 90%
    }
}


@media (max-width: 330px) {
    .menu-controls button {
        width: 100px;
        font-size: 15px;
    }
    .logo {
        font-size: 300%;
    }

    #menu-h2 {
        font-size: 1.2rem;
    }

    #menu-h3 {
        font-size: 1rem;
    }
}

@media (max-width: 300px) {
    .modal {
        width: 65%;
    }
    .option-btn {
        width: 220px;
        
    }
    #next-btn {
        height: 85px;
        width: 85px;
    }
    .logo {
        font-size: 250%;
    }
}

